--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "envy-landing-page",
+  "name": "landing-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,10 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+
   },
   "scripts": {
     "start": "react-scripts start",
