--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "smooth-scrollbar-react": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-
   },
   "scripts": {
     "start": "react-scripts start",
